--- a/hyprland.conf
+++ b/hyprland.conf
@@ -25,6 +25,9 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+# monitor= HDMI-A-1, preferred, 0x0, auto
+# monitor= DP-9, preferred, 3440x0, auto
+# monitor= eDP-1, preferred, 3440x1440, auto
 
 
 ###################
@@ -35,7 +38,8 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+# $fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 
 
@@ -51,7 +55,8 @@ $menu = rofi -show drun
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 # exec-once = fcitx5
-exec-once = ibus-daemon -dr
+# exec-once = ibus-daemon -dr
+exec-once = kime
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -62,10 +67,11 @@ exec-once = ibus-daemon -dr
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-env = GTK_IM_MODULE,ibus
-env = QT_IM_MODULE,ibus
-env = XMODIFIERS=@im,ibus
-
+# input Method
+# env = XDG_CURRENT_DESKTOP,Hyprland
+env = GTK_IM_MODULE,kime
+env = QT_IM_MODULE,kime
+env = XMODIFIERS,@im=kime
 
 #####################
 ### LOOK AND FEEL ###
@@ -182,13 +188,13 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = kr
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = korean:ralt_hangul,korean:rctrl_hanja
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -218,9 +224,9 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, Q, exit,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
