rofi theme change

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -40,7 +40,8 @@ monitor=,preferred,auto,auto
 $terminal = alacritty
 # $fileManager = dolphin
 $fileManager = nautilus
-$menu = rofi -show drun
+# $menu = rofi -show drun
+$menu = ~/.config/rofi/launchers/type-2/launcher.sh
 
 
 #################
