--- a/hyprland.conf
+++ b/hyprland.conf
@@ -24,10 +24,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-# monitor= HDMI-A-1, preferred, 0x0, auto
-# monitor= DP-9, preferred, 3440x0, auto
-# monitor= eDP-1, preferred, 3440x1440, auto
+# monitor=,preferred,auto,auto
+monitor= HDMI-A-1, preferred, 0x0, auto
+monitor= DP-9, preferred, 3440x0, auto
+monitor= eDP-1, preferred, 3440x1440, auto
 
 
 ###################
@@ -41,7 +41,7 @@ $terminal = alacritty
 # $fileManager = dolphin
 $fileManager = nautilus
 # $menu = rofi -show drun
-$menu = ~/.config/rofi/launchers/type-2/launcher.sh
+$menu = ~/.config/rofi/launchers/type-1/launcher.sh
 
 
 #################
@@ -158,6 +158,9 @@ animations {
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
+workspace = 1-4, monitor:HDMI-A-1
+workspace = 5, monitor:DP-9
+workspace = 6, monitor:eDP-1
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
 # windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
