--- a/hyprland.conf
+++ b/hyprland.conf
@@ -42,6 +42,7 @@ $terminal = alacritty
 $fileManager = nautilus
 # $menu = rofi -show drun
 $menu = ~/.config/rofi/launchers/type-1/launcher.sh
+$powerMenu = ~/.config/rofi/powermenu/type-1/powermenu.sh
 
 
 #################
@@ -54,7 +55,7 @@ $menu = ~/.config/rofi/launchers/type-1/launcher.sh
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
+exec-once = waybar & hyprpaper
 # exec-once = fcitx5
 # exec-once = ibus-daemon -dr
 exec-once = kime
@@ -158,7 +159,10 @@ animations {
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
-workspace = 1-4, monitor:HDMI-A-1
+workspace = 1, monitor:HDMI-A-1
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
 workspace = 5, monitor:DP-9
 workspace = 6, monitor:eDP-1
 # workspace = w[tv1], gapsout:0, gapsin:0
@@ -230,7 +234,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod SHIFT, Q, exit,
+# bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, Q, exec, $powerMenu
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
