--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = $HOME/Pictures/wallpaper.jpg
-wallpaper = , $HOME/Pictures/wallpaper.jpg
+preload = $HOME/Pictures/Wallpaper-Bank/wallpapers/Manga-Shrine.png
+wallpaper = , $HOME/Pictures/Wallpaper-Bank/wallpapers/Manga-Shrine.png
