--- a/hyprland.conf
+++ b/hyprland.conf
@@ -202,7 +202,8 @@ input {
     kb_options = korean:ralt_hangul,korean:rctrl_hanja
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 2
+    float_switch_override_focus = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
