--- a/hyprland.conf
+++ b/hyprland.conf
@@ -204,6 +204,7 @@ input {
 
     follow_mouse = 2
     float_switch_override_focus = 0
+    focus_on_close = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
